<resources>
    <string name="app_name">SwcApp</string>
    <string name="announcer_idle" />
    <string name="announcer_hello">안녕하세요!</string>
    <string name="announcer_retry">다시 시도해 주세요</string>
    <string name="announcer_really">정말요?</string>
    <string name="announcer_listen">말씀하세요</string>
    <string name="announcer_error">무슨 말인지 잘 모르겠어요</string>
    <string name="save_success">%s에 파일을 저장했습니다.</string>
    <string name="next_alarm">다음 알람 : </string>
    <string name="next_response">다음 응답 : </string>
    <string name="next_fmt">%04d-%02d-%02d %02d:%02d - %s</string>
    <string name="powered_by">powered by 빅데이터공학과 ANT lab.</string>
    <string name="designed_by">designed by freepik.com</string>

    <string name="record_start">녹음 시작</string>
    <string name="record_end">녹음 종료</string>
</resources>
