<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:gravity="center">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center|end">

		<Button
			android:id="@+id/btn_alarm_list"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="알람 목록"
			android:layout_marginEnd="20dp"/>
	</LinearLayout>
	
	<Space
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/talkBallon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:adjustViewBounds="true"
                android:layout_gravity="center"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/announcerTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/announcer_hello" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </FrameLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center" 
		android:orientation="horizontal">

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<view class="ant.swcapp.MainActivity$Announcer"
			android:id="@+id/announcer"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginVertical="20dp"
			android:layout_gravity="center"
			app:srcCompat="@drawable/announcer_idle1"
			android:adjustViewBounds="true"/>
			
		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>
	</LinearLayout>
		
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:fontFamily="@font/gungsuh"
		android:textSize="25sp"
		android:textColor="#000000"
		android:text="빅 공 녀"/>
		
	<Space
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="1"/>
			
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center" 
		android:orientation="horizontal">

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="3"/>

		<ImageButton
			android:id="@+id/recordingButton"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:background="#00000000"
			app:srcCompat="@drawable/record_button"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter" />
			
		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="3"/>
	</LinearLayout>
		
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="말걸기"
		android:layout_marginBottom="10dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center" 
		android:orientation="horizontal">

		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<TextView
			android:id="@+id/sttTextView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:background="@drawable/rectangle_draw_back"
			android:gravity="center"
			android:minLines="4"
			android:text="@string/announcer_idle"/>
			
		<Space
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>
	</LinearLayout>
	
	<Space
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_weight="1"/>
	
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="13sp"
		android:text="@string/powered_by" />
		
	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginBottom="20dp"
		android:textSize="7sp"
		android:text="@string/designed_by" />
</LinearLayout>